# mm_viz

./: handcrafted_test_cases.py  hello.py  pyproject.toml  viz.py
mm_viz/: mixture_model.py  viz.py
